// tag::header[]
[%autowidth.stretch]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
// tag::ent-db[]
| 05/19/2023 | Database | Added new TR: Oracle 19c in Standalone Restart on AWS FSx/EC2 with NFS/ASM
// end::ent-db[]
// tag::rhhc[]
| 05/16/2023 | Hybrid Multicloud with Red Hat OpenShift | Added new title in the side bar and new content
| 05/16/2023 | Hybrid Multicloud with Red Hat OpenShift | Added new content 
// end::rhhc[]
// tag::hmc[]
| 05/10/2023 | Hybrid Cloud | Added TR-4955: Disaster Recovery with Azure NetApp Files (ANF) and Azure VMware Solution (AVS)
// end::hmc[]
// tag::ent-db[]
| 05/05/2023 | Database | New TR-4951: Backup and Recovery for Microsoft SQL Server on AWS FSx for ONTAP
// end::ent-db[]
// tag::vmware[]
| 05/04/2023 | Virtualization | Added "What's New with VMware vSphere 8" content
// end::vmware[]
// tag::hmc[]
| 04/27/2023 | Hybrid Cloud | Added Veeam Backup & Restore in VMware Cloud with AWS FSx for ONTAP
// end::hmc[]
// tag::ent-db[]
| 03/31/2023 | Database | Added Oracle Database Deployment and Protection in AWS FSx/EC2 with iSCSI/ASM
| 03/31/2023 | Database | Added Oracle Database Backup, Restore and Clone with SnapCenter Services
// end::ent-db[]
// tag::automation[]
| 03/29/2023 | Automation | Updated blog "FSx for ONTAP Monitoring and Auto-Resizing using AWS Lambda Function" with options for private/public deployment along with manual/automated deployment options.
| 03/22/2023 | Automation | Added blog: FSx for ONTAP Monitoring and Auto-Resizing using AWS Lambda Function
// end::automation[]
// tag::ent-db[]
| 02/15/2023 | Database | Added PostgreSQL High Availability Deployment and Disaster Recovery in AWS FSx/EC2
// end::ent-db[]
// tag::hmc[]
| 02/07/2023 | Hybrid Cloud | Added blog: Announcing general availability of NetApp Cloud Volumes Service datastore support for Google Cloud VMware Engine