@@ -3,6 +3,8 @@ indexpage:
   tiles:
     - title: "Oracle"
       links:
+      - title: "Quick Recovery and Clone of Oracle VLDB with Incremental Merge on AWS FSx ONTAP"
+        url: /aws_ora_fsx_ec2_inc_merge.html
       - title: "Oracle 19c in Standalone Restart on AWS FSx/EC2 with NFS/ASM"
         url: /aws_ora_fsx_ec2_nfs_asm.html
       - title: "Oracle Database Deployment and Protection in AWS FSx/EC2 with iSCSI/ASM"
@@ -17,8 +19,7 @@ indexpage:
         url: /marketing_overview.html
       - title: "Automated Oracle Data Protection"
         url: /db_protection_overview.html
-      - title: "Oracle Databases on NetApp EF-Series"
-        url: https://www.netapp.com/pdf.html?item=/media/17248-tr4794pdf.pdf
+
 #
     - title: "SQL Server"
       links:
@@ -43,6 +44,8 @@ indexpage:
           url: /sqlsb-backup-and-restore-aws-fsxn.html
         - title: "Oracle 19c RAC Databases on FlexPod DataCenter"
           url: https://www.netapp.com/pdf.html?item=/media/25782-nva-1155.pdf
+        - title: "Oracle Databases on NetApp EF-Series"
+          url: https://www.netapp.com/pdf.html?item=/media/17248-tr4794pdf.pdf
 
 #
     - title: "Open Source Databases"
