@@ -108,6 +108,6 @@ sysctl -a | grep tcp.*.slot_table
 image:aws_ora_fsx_ec2_nfs_01.PNG["This table shows the detailed NFS mount options for the following file types, control files, data files, redo logs, ORACLE_HOME, and ORACLE_BASE."]
 
 [NOTE]
-Before using dNFS, verify that the patches described in Oracle Doc 1495104.1 are installed. Starting with Oracle 12c, DNFS includes support for NFSv3, NFSv4, and NFSv4.1. NetApp support policies cover v3 and v4 for all clients, but, at the time of writing, NFSv4.1 is not supported for use with Oracle dNFS.
+Before using dNFS, verify that the patches described in Oracle Doc 1495104.1 are installed. The NetApp Support matrix for NFSv3 and NFSv4 do not include specific operating systems. All OSs that obey the RFC are supported. When searching the online IMT for NFSv3 or NFSv4 support, do not select a specific OS because no matches will be displayed. All OSs are implicitly supported by the general policy.
 
 link:azure_ora_nfile_procedures.html[Next: Deployment procedures.]
