@@ -4,7 +4,10 @@
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
 // tag::ent-db[]
-| 05/19/2023 | Database | Added new TR: Oracle 19c in Standalone Restart on AWS FSx/EC2 with NFS/ASM
+| 06/09/2023 | Database | Added new TR-4973: Quick Recovery and Clone of Oracle VLDB with Incremental Merge on AWS FSx ONTAP
+// end::ent-db[]
+// tag::ent-db[]
+| 05/19/2023 | Database | Added new TR-4974: Oracle 19c in Standalone Restart on AWS FSx/EC2 with NFS/ASM
 // end::ent-db[]
 // tag::rhhc[]
 | 05/16/2023 | Hybrid Multicloud with Red Hat OpenShift | Added new title in the side bar and new content
